Terraform/front-end-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"prometheus.io/scrape":"true"},"creationTimestamp":"2024-10-07T09:12:59Z","labels":{"name":"front-end"},"name":"front-end","namespace":"sock-shop","resourceVersion":"150393","uid":"8086e527-9a87-49ea-b8c4-e4ee9a80bcbf"},"spec":{"clusterIP":"172.20.247.22","clusterIPs":["172.20.247.22"],"externalTrafficPolicy":"Cluster","internalTrafficPolicy":"Cluster","ipFamilies":["IPv4"],"ipFamilyPolicy":"SingleStack","ports":[{"port":80,"pr [...]
    prometheus.io/scrape: "true"
  creationTimestamp: "2024-10-07T09:12:59Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    name: front-end
  name: front-end
  namespace: sock-shop
  resourceVersion: "188358"
  uid: 8086e527-9a87-49ea-b8c4-e4ee9a80bcbf
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 172.20.247.22
  clusterIPs:
  - 172.20.247.22
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 30001
    port: 80
    protocol: TCP
    targetPort: 8079
  selector:
    name: front-end
  sessionAffinity: None
  type: NodePort
status:
