Terraform/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sock-shop-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: babadjanov.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end  # The Service this Ingress routes to
            port:
              number: 80   # The port exposed by the Service
